fixed box alignment

--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,7 @@ main {
 
 /*argument box*/
 .box {
+    vertical-align: middle;
     padding: 6px;
     border-radius: 10px;
     background-color: white;
